--- a/content/W15.html
+++ b/content/W15.html
@@ -143,6 +143,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='cEX.html'>Next</a> >> cEX<br /><h1>W15</h1>
+<p><video controls="controls" height="641" width="1000">
+<source src="/get_page/W15/images/12.mp4" type="video/mp4"/></video></p>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
 #include &lt;gd.h&gt;
 #include &lt;math.h&gt;
