--- a/content/W11-12.html
+++ b/content/W11-12.html
@@ -303,7 +303,8 @@ int main() {
 
     return 0;
 }</pre>
-<p><img alt="" height="300" src="./../images/hellogd2.png" width="400"/></p><br />w8 << <a href='w8.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
+<p><img alt="" height="300" src="./../images/hellogd2.png" width="400"/></p>
+<br />w8 << <a href='w8.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
         
     <!-- footer -->
       <div class="container">
