--- a/config/content.htm
+++ b/config/content.htm
@@ -974,7 +974,8 @@ int main() {
 
     return 0;
 }</pre>
-<p><img alt="" height="300" src="/images/hellogd2.png" width="400"/></p><h1>w13</h1>
+<p><img alt="" height="300" src="/images/hellogd2.png" width="400"/></p>
+<h1>w13</h1>
 <div class="line number1 index0 alt2">
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
  
@@ -1030,7 +1031,7 @@ return 0;
 </div>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><img alt="" height="200" src="/images/motion_plot.png" width="400"/></span></span></span></span></span></span></span></span></span></span></span></span></span></span></p>
 <h1>W15</h1>
-<p><video controls="controls" height="641" width="1000">
+<p><video controls="controls" height="512" width="799">
 <source src="/get_page/W15/images/12.mp4" type="video/mp4"/></video></p>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
 #include &lt;gd.h&gt;
@@ -1199,9 +1200,10 @@ void circleLineIntersection(double h, double k, double r, double x1, double y1, 
     }
 }
 </pre>
+<h1>cEX</h1>
 <p><video controls="controls" height="630" width="1008">
 <source src="/images/計算機概論.mp4" type="video/mp4"/></video></p>
-<p><span style="vertical-align: inherit;"></span></p><h1>cEX</h1>
+<p><br/><span style="vertical-align: inherit;"></span></p>
 <p><span style="vertical-align: inherit;">1.</span></p>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
 
