--- a/content/W15.html
+++ b/content/W15.html
@@ -143,7 +143,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='cEX.html'>Next</a> >> cEX<br /><h1>W15</h1>
-<p><video controls="controls" height="641" width="1000">
+<p><video controls="controls" height="512" width="799">
 <source src="/get_page/W15/images/12.mp4" type="video/mp4"/></video></p>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
 #include &lt;gd.h&gt;
@@ -312,9 +312,7 @@ void circleLineIntersection(double h, double k, double r, double x1, double y1, 
     }
 }
 </pre>
-<p><video controls="controls" height="630" width="1008">
-<source src="./../images/計算機概論.mp4" type="video/mp4"/></video></p>
-<p><span style="vertical-align: inherit;"></span></p><br />w13 << <a href='w13.html'>Previous</a> <a href='cEX.html'>Next</a> >> cEX</div>
+<br />w13 << <a href='w13.html'>Previous</a> <a href='cEX.html'>Next</a> >> cEX</div>
         
     <!-- footer -->
       <div class="container">
