--- a/content/cEX.html
+++ b/content/cEX.html
@@ -143,6 +143,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W15 << <a href='W15.html'>Previous</a> <br /><h1>cEX</h1>
+<p><video controls="controls" height="630" width="1008">
+<source src="./../images/計算機概論.mp4" type="video/mp4"/></video></p>
+<p><br/><span style="vertical-align: inherit;"></span></p>
 <p><span style="vertical-align: inherit;">1.</span></p>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
 
