--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1031,8 +1031,6 @@ return 0;
 </div>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><img alt="" height="200" src="/images/motion_plot.png" width="400"/></span></span></span></span></span></span></span></span></span></span></span></span></span></span></p>
 <h1>W15</h1>
-<h1><video controls="controls" height="641" width="1000">
-<source src="/images/計算機概論.mp4" type="video/mp4"/></video></h1>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
 #include &lt;gd.h&gt;
 #include &lt;math.h&gt;
@@ -1200,8 +1198,8 @@ void circleLineIntersection(double h, double k, double r, double x1, double y1, 
     }
 }
 </pre><h1>cEX</h1>
-<p><video controls="controls" height="630" width="1008">
-<source src="/images/計算機概論.mp4" type="video/mp4"/></video></p>
+<p><video controls="controls" height="641" width="1000">
+<source src="/images/12.mp4" type="video/mp4"/></video></p>
 <p><br/><span style="vertical-align: inherit;"></span></p>
 <p><span style="vertical-align: inherit;">1.</span></p>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
