--- a/content/.html
+++ b/content/.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,185 +142,93 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w8 << <a href='w8.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>W11-12</h1>
-<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
-#include &lt;gd.h&gt;
-#include &lt;math.h&gt;
+    <div id="tipue_search_content">課程 << <a href='課程.html'>Previous</a> <a href='練習.html'>Next</a> >> 練習<br /><h1></h1>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdlib.h&gt;
+#include &lt;stdio.h&gt;
+#include &lt;time.h&gt;
 
-// Declare the rotation function
-void rotateFilledPolygon(int x_orig, int y_orig, double rotation_ang, gdPoint *points, int num_points) {
-    int i;
-    double angle_rad = rotation_ang * M_PI / 180.0;
+int main(void)
+{
+    // 设置时区为“Asia/Calcutta”
+    setenv("TZ", "/usr/share/zoneinfo/Asia/Calcutta", 1);   
 
-    for (i = 0; i &lt; num_points; i++) {
-        int x = points[i].x - x_orig;
-        int y = points[i].y - y_orig;
+    // 获取并打印当前日期和时间
+    struct tm tm = *localtime(&amp;(time_t){time(NULL)});
+    printf("\n今天是 :            %s", asctime(&amp;tm));
+    printf("(夏令时 %s)\n", tm.tm_isdst ? "生效中" : "未生效");
 
-        points[i].x = x_orig + (int)(x * cos(angle_rad) - y * sin(angle_rad));
-        points[i].y = y_orig + (int)(x * sin(angle_rad) + y * cos(angle_rad));
-    }
-}
+    // 将月份减去 24，表示 24 个月前的日期和时间
+    tm.tm_mon -= 24;  
 
-int main() {
-    // Image dimensions
-    int width = 800;
-    int height = 600;
+    // 重新计算时间
+    mktime(&amp;tm);       
 
-    // Create a true-color image
-    gdImagePtr img = gdImageCreateTrueColor(width, height);
-    gdImageAlphaBlending(img, 0);
-
-    // Open the output file
-    FILE *outputFile = fopen("hellogd1.png", "wb");
-    if (outputFile == NULL) {
-        fprintf(stderr, "Error opening the output file.\n");
-        return 1;
-    }
-
-    // Define color indices
-    int red = gdImageColorAllocate(img, 255, 0, 0);
-    int blue = gdImageColorAllocate(img, 0, 0, 255);
-    int black = gdImageColorAllocate(img, 0, 0, 0);
-    int white = gdImageColorAllocate(img, 255, 255, 255);
-
-    // Draw filled rectangles, ellipse, line, and polygons
-    gdImageFilledRectangle(img, 0, 0, width, height, white);
-    gdImageFilledRectangle(img, 0, 0, (int)width / 4, (int)height / 4, blue);
-
-    gdImageFilledEllipse(img, (int)width * 3 / 4, (int)height / 4, (int)width / 4, (int)width / 4, red);
-    gdImageEllipse(img, (int)width * 3 / 4, (int)height * 3 / 4, (int)width / 4, (int)width / 4, red);
-    gdImageLine(img, (int)width / 2, (int)height / 2, (int)width / 2, (int)height / 2 + 100, blue);
-
-    gdPoint points[4] = {
-        { (int)width / 4, (int)height * 3 / 4 },
-        { (int)width / 4 + 100, (int)height * 3 / 4 },
-        { (int)width / 4 + 100, (int)height * 3 / 4 + 100 },
-        { (int)width / 4, (int)height * 3 / 4 + 100 }
-    };
-
-    // Call the rotation function for the first polygon
-    rotateFilledPolygon((int)width / 4 + 50, (int)height * 3 / 4 + 50, 45.0, points, 4);
-    gdImagePolygon(img, points, 4, black);
-
-    gdPoint points2[4] = {
-        { (int)width / 3, (int)height / 2 },
-        { (int)width / 3 + 100, (int)height / 2 },
-        { (int)width / 3 + 100, (int)height / 2 + 100 },
-        { (int)width / 3 - 50, (int)height / 2 + 100 }
-    };
-
-    // Call the rotation function for the second polygon
-    rotateFilledPolygon((int)width / 3 + 50, (int)height / 2 + 50, 30.0, points2, 4);
-    gdImageFilledPolygon(img, points2, 4, red);
-
-    // Save the image to the output file
-    gdImagePngEx(img, outputFile, 9);
-    fclose(outputFile);
-
-    // Free the memory used by the image
-    gdImageDestroy(img);
+    // 获取并打印 24 个月前的日期和时间
+    printf("\n24个月前的日期是 : %s", asctime(&amp;tm));
+    printf("(夏令时 %s)\n\n", tm.tm_isdst ? "生效中" : "未生效");
 
     return 0;
 }
 </pre>
-<p><span style="vertical-align: inherit;"><br/><img alt="" height="300" src="./../images/hellogd.png" width="400"/></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">先設定hello.c的檔</span></span></p>
-<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">#include &lt;stdio.h&gt;</span></span><span></span>
-<span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
-int main()</span></span><span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
-{</span></span><span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
-printf("你好世界\n");</span></span><span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
-}</span></span></pre>
-<p><br/><br/></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">然後再shell打cc hello.c會出現這個</span></span></p>
-<p><img alt="" height="257" src="./../images/螢幕擷取畫面 2023-12-21 022524.png" width="400"/></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">然後要回車這樣replit就會幫我準備好c</span></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">之後再進行一次程式</span></span><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">cc hello.c，然後打./a.out</span></span></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">然後就會出現hello world</span></span></p>
-<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
-#include &lt;gd.h&gt;
-#include &lt;math.h&gt;
+<p><img alt="" height="237" src="./../images/螢幕擷取畫面 2023-12-26 181409.png" width="502"/></p>
+<p><video controls="controls" height="641" width="1000">
+<source src="./../images/3.mp4" type="video/mp4"/></video></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdlib.h&gt;
+#include &lt;stdio.h&gt;
+#include &lt;time.h&gt;
 
-// Declare the rotation function
-void rotateFilledPolygon(int x_orig, int y_orig, double rotation_ang, gdPoint *points, int num_points) {
-    int i;
-    double angle_rad = rotation_ang * M_PI / 180.0;
+int main(void)
+{
+    // 设置时区为“Asia/Calcutta”
+    setenv("TZ", "/usr/share/zoneinfo/Asia/Calcutta", 1);   
 
-    for (i = 0; i &lt; num_points; i++) {
-        int x = points[i].x - x_orig;
-        int y = points[i].y - y_orig;
+    // 获取并打印当前日期和时间
+    struct tm tm = *localtime(&amp;(time_t){time(NULL)});
+    printf("\n今天是 :            %s", asctime(&amp;tm));
+    printf("(夏令时 %s)\n", tm.tm_isdst ? "生效中" : "未生效");
 
-        points[i].x = x_orig + (int)(x * cos(angle_rad) - y * sin(angle_rad));
-        points[i].y = y_orig + (int)(x * sin(angle_rad) + y * cos(angle_rad));
-    }
-}
+    // 将月份减去 24，表示 24 个月前的日期和时间
+    tm.tm_mon -= 24;  
 
-int main() {
-    int width = 800;
-    int height = 600;
+    // 重新计算时间
+    mktime(&amp;tm);       
 
-    gdImagePtr img = gdImageCreateTrueColor(width, height);
-    gdImageAlphaBlending(img, 0);
-
-    FILE *outputFile = fopen("hellogd2.png", "wb");
-    if (outputFile == NULL) {
-        fprintf(stderr, "Error opening the output file.\n");
-        return 1;
-    }
-
-    int red = gdImageColorAllocate(img, 255, 0, 0);
-    int blue = gdImageColorAllocate(img, 0, 0, 255);
-    int black = gdImageColorAllocate(img, 0, 0, 0);
-    int white = gdImageColorAllocate(img, 255, 255, 255);
-
-    gdImageFilledRectangle(img, 0, 0, width, height, white);
-    gdImageFilledRectangle(img, 0, 0, (int)width / 4, (int)height / 4, blue);
-
-    gdImageFilledEllipse(img, (int)width * 3 / 4, (int)height / 4, (int)width / 4, (int)width / 4, red);
-    gdImageEllipse(img, (int)width * 3 / 4, (int)height * 3 / 4, (int)width / 4, (int)width / 4, red);
-    gdImageLine(img, (int)width / 2, (int)height / 2, (int)width / 2, (int)height / 2 + 100, blue);
-
-    gdPoint points[4];
-    points[0].x = (int)width / 4;
-    points[0].y = (int)height * 3 / 4;
-    points[1].x = points[0].x + 100;
-    points[1].y = points[0].y;
-    points[2].x = points[1].x;
-    points[2].y = points[1].y + 100;
-    points[3].x = points[2].x - 100;
-    points[3].y = points[2].y;
-
-    // Call the rotation function multiple times
-    for (int i = 0; i &lt; 4; i++) {
-        rotateFilledPolygon((int)width / 4 + 50, (int)height * 3 / 4 + 50, 30.0, points, 4);
-        gdImagePolygon(img, points, 4, black);
-    }
-
-    gdPoint points2[4];
-    points2[0].x = (int)width / 3;
-    points2[0].y = (int)height / 2;
-    points2[1].x = points2[0].x + 100;
-    points2[1].y = points2[0].y;
-    points2[2].x = points2[1].x;
-    points2[2].y = points2[1].y + 100;
-    points2[3].x = points2[2].x - 150;
-    points2[3].y = points2[2].y;
-
-    // Call the rotation function multiple times
-    for (int i = 0; i &lt; 12; i++) {
-        //rotateFilledPolygon((int)width / 3 + 50, (int)height / 2 + 50, 30.0, points2, 4);
-        rotateFilledPolygon(500, 200, 30.0, points2, 4);
-        gdImageFilledPolygon(img, points2, 4, red);
-    }
-
-    gdImagePngEx(img, outputFile, 9);
-    fclose(outputFile);
-    gdImageDestroy(img);
+    // 获取并打印 24 个月前的日期和时间
+    printf("\n24个月前的日期是 : %s", asctime(&amp;tm));
+    printf("(夏令时 %s)\n\n", tm.tm_isdst ? "生效中" : "未生效");
 
     return 0;
+}
+</pre>
+<p><img alt="" height="237" src="./../images/螢幕擷取畫面 2023-12-26 181409.png" width="502"/></p>
+<p><video controls="controls" height="641" width="1000">
+<source src="./../images/4.mp4" type="video/mp4"/></video></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
+#include &lt;limits.h&gt;
+
+double powxn(double x, int n) {
+    double k;
+    if (n == 0) return 1;
+    k = powxn(x * x, n / 2);
+    if (n % 2) k = k * x;
+    return k;
+}
+
+int main(void)
+{
+    double x = 7.0;
+    int n = 2;
+    printf("\nx = %f, y = %d  ", x, n);
+    printf("\nResult:(x^n) : %f ",powxn(x, n));
+    x = 6.2;
+    n = 3;
+    printf("\n\nx = %f, y = %d  ", x, n);
+    printf("\nResult:(x^n) : %f ",powxn(x, n));
+    return 0;
 }</pre>
-<p><img alt="" height="300" src="./../images/hellogd2.png" width="400"/></p>
-<br />w8 << <a href='w8.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
+<p><img alt="" height="202" src="./../images/螢幕擷取畫面 2023-12-26 190043.png" width="498"/></p>
+<p>1</p>
+<br />課程 << <a href='課程.html'>Previous</a> <a href='練習.html'>Next</a> >> 練習</div>
         
     <!-- footer -->
       <div class="container">
